play.gl is black on Linux
Categories
(Core :: Graphics: CanvasWebGL, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox73 | --- | unaffected |
firefox74 | + | fixed |
firefox75 | + | fixed |
People
(Reporter: emilio, Assigned: jgilbert)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
54.51 KB,
text/html
|
Details | |
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-release-
|
Details | Review |
https://play.gl/ shows only black on nightly, but it works on 73.
There are tons of warnings, one about context lost, a bunch of them about using an unlinked program.
Reporter | ||
Comment 1•5 years ago
|
||
Mozregression says this was caused by bug 1617512: https://hg.mozilla.org/integration/autoland/rev/30bbb50fff90f52bd9d509e4f96d379c5f01b543
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Reporter | ||
Comment 4•5 years ago
|
||
[Tracking Requested - why for this release]: Regressing patch made it to beta.
Assignee | ||
Comment 5•5 years ago
•
|
||
The "regressing patch" is fixing a regression itself, so I don't want to back it out.
Assignee | ||
Comment 6•5 years ago
•
|
||
In'//\n'
, /[^\\]\n/
doesn't match '\n'
following '//'
. :(
I'm amazed the tests didn't catch this.
Assignee | ||
Comment 7•5 years ago
|
||
Assignee | ||
Comment 8•5 years ago
|
||
Assignee | ||
Comment 10•5 years ago
|
||
This is more serious than bug 1617512. I expect this to break noticeable content.
Assignee | ||
Comment 11•5 years ago
|
||
Comment on attachment 9131799 [details]
Bug 1620876 - Handle "//\n" webglsl comments.
Beta/Release Uplift Approval Request
- User impact if declined: Likely broken content, including at least play.gl.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Easy to understand bug, straightforward fix.
If we don't take this, we should remove bug 1617512's fix from 74.
- String changes made/needed: none
Updated•5 years ago
|
Comment 12•5 years ago
|
||
Comment on attachment 9131799 [details]
Bug 1620876 - Handle "//\n" webglsl comments.
74 is on mozilla-release and ships tomorrow...
Comment 13•5 years ago
|
||
bugherder |
Comment 14•5 years ago
|
||
Comment on attachment 9131799 [details]
Bug 1620876 - Handle "//\n" webglsl comments.
We are not taking the uplift, we are backing out bug 1617512 and building a RC3 instead.
Comment 15•5 years ago
|
||
Fixed in 74RC3 by the backout in bug 1617512
Updated•5 years ago
|
Description
•