Bug 1620876 - Handle "//\n" webglsl comments. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D65929

--HG--
extra : moz-landing-system : lando